Fix margin spacing on smallimg shortcode and add clear functionality

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,10 +289,14 @@ strong {
     padding-right: 1.2rem !important;
     box-sizing: border-box !important;
 }
+.small-pic {
+    display: block;
+    margin-top: 1.5em;
+}
 .small-img {
     width: unset;
     max-width: 100%;
-    margin: 1.5em auto;
+    margin: 0 auto 1.5em auto;
 }
 .muted-text {
     color: #7a7b7c;
@@ -308,6 +312,9 @@ strong {
 .no-scroll {
     overflow: hidden;
     position: fixed;
+}
+.clear {
+    clear: both;
 }
 h1, h2, h3, h4, h5, h6 {
     margin: 1.5em 0 -0.5em 0;
@@ -375,7 +382,7 @@ th {
 }
 th {
     font-family: 'LatoLatinWebHeavy';
-    font-weight: normal
+    font-weight: normal;
 }
 tr:nth-child(even) td {
     background: #f5f6f7;
@@ -456,11 +463,11 @@ footer {
     }
     .smartfloat-right {
         float: right;
-        margin: 0em 0em 1em 1em;
+        margin: 0 0 1.5em 1.5em;
     }
     .smartfloat-left {
         float: left;
-        margin: 0em 1em 1em 0em;
+        margin: 0 1.5em 1.5em 0;
     }
     code {
         border-radius: 0.2rem;
